# FIFOImplementation

./: FIFOManagement.slnx  FIFO_Data_Management_Implementation_Guide.md  Guia_Implementacion_Paso_a_Paso.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  build.ps1  setup_prototype.py
.claude/: settings.local.json
FIFOEngine/: CMakeLists.txt
FIFOEngine/include/: fifo_api.h
FIFOEngine/src/: cleanup.cpp  cleanup.h  database.cpp  database.h  datagen.cpp  datagen.h  fifo_api.cpp  forecast.cpp  forecast.h  scanner.cpp  scanner.h  scheduler.cpp  scheduler.h
FIFOManagement/: App.xaml  App.xaml.cs  FIFOManagement.csproj  MainWindow.xaml  MainWindow.xaml.cs
FIFOManagement/Interop/: FIFONative.cs
FIFOManagement/Models/: Asset.cs  DataFile.cs  DeletionLog.cs  StoragePath.cs
FIFOManagement/Services/: DataGenerator.cs  DatabaseService.cs  EngineService.cs  FIFOEngine.cs
FIFOManagement/ViewModels/: MainViewModel.cs  ViewModelBase.cs
prototipo/: db_init.py
prototipo/database/: fifo_prototype.db
